--- a/ArtFinder/Base.lproj/Main.storyboard
+++ b/ArtFinder/Base.lproj/Main.storyboard
@@ -181,7 +181,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="194"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mj8-tm-LAe">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mj8-tm-LAe">
                                                     <rect key="frame" x="20" y="11" width="200" height="172"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="200" id="Hm7-XN-C1Y"/>
@@ -249,7 +249,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AbL-eN-TjM">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AbL-eN-TjM">
                                 <rect key="frame" x="0.0" y="88" width="414" height="537.5"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Located" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SiT-pL-9Ga">
@@ -357,7 +357,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="StP-Ag-COF"/>
                     </view>
-                    <navigationItem key="navigationItem" id="qmi-gA-YkP"/>
+                    <navigationItem key="navigationItem" id="qmi-gA-YkP">
+                        <barButtonItem key="rightBarButtonItem" title="Museum" id="yot-Wm-0eh">
+                            <connections>
+                                <segue destination="wuo-cc-FSP" kind="show" id="DJZ-tt-EDM"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="artImage" destination="AbL-eN-TjM" id="Izs-bV-c9p"/>
                         <outlet property="categoryLabel" destination="sfX-vj-wEg" id="n3q-Au-1J9"/>
@@ -371,36 +377,21 @@
             </objects>
             <point key="canvasLocation" x="3269.5652173913045" y="115.84821428571428"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="BWW-Hi-7sf">
+        <!--Museum Link View Controller-->
+        <scene sceneID="ss2-Ch-HId">
             <objects>
-                <viewController id="361-pR-LxW" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="fe0-Ef-plE">
+                <viewController id="wuo-cc-FSP" customClass="MuseumLinkViewController" customModule="ArtFinder" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="InP-b5-cCX">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VEb-lx-MYa">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <wkWebViewConfiguration key="configuration">
-                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
-                                    <wkPreferences key="preferences"/>
-                                </wkWebViewConfiguration>
-                            </wkWebView>
-                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="71R-6b-9sj" firstAttribute="bottom" secondItem="VEb-lx-MYa" secondAttribute="bottom" id="M0F-Up-TKc"/>
-                            <constraint firstItem="71R-6b-9sj" firstAttribute="trailing" secondItem="VEb-lx-MYa" secondAttribute="trailing" id="QI3-IN-rZz"/>
-                            <constraint firstItem="VEb-lx-MYa" firstAttribute="leading" secondItem="71R-6b-9sj" secondAttribute="leading" id="Qab-jR-SZU"/>
-                            <constraint firstItem="VEb-lx-MYa" firstAttribute="top" secondItem="71R-6b-9sj" secondAttribute="top" id="jP2-7r-5xp"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="71R-6b-9sj"/>
+                        <viewLayoutGuide key="safeArea" id="ju8-Nn-JC3"/>
                     </view>
+                    <navigationItem key="navigationItem" id="RMx-gy-jOz"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HUl-Qo-glt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rY3-qX-A50" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3966" y="112"/>
+            <point key="canvasLocation" x="3941" y="117"/>
         </scene>
         <!--Art Finder-->
         <scene sceneID="t0p-Iz-zTy">
